[tool.poetry]
name = "gatorgrade-hello-world"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7.2,<4.0"
rich = "^12.5.1"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
